# pyo3-repro

./: Cargo.toml  main.py  pyproject.toml
dep-crate/: Cargo.toml
dep-crate/src/: example.rs
src/: lib.rs
